[gd_scene load_steps=14 format=3 uid="uid://b7r52wai1l1yc"]

[ext_resource type="Texture2D" uid="uid://chhc6bjga1571" path="res://Art/Sprites/player idle.png" id="1_l1tv2"]
[ext_resource type="Script" path="res://Scripts/menu_dog.gd" id="2_fuvt8"]
[ext_resource type="Texture2D" uid="uid://dpentnylex1c" path="res://Art/Sprites/player run.png" id="2_ljq40"]
[ext_resource type="PackedScene" uid="uid://bb6l6e5xtb17k" path="res://Scenes/Particles/shadow.tscn" id="4_12wkv"]
[ext_resource type="Texture2D" uid="uid://b0rfe3ff6ilq5" path="res://Art/Sprites/upgrade spritesheet.png" id="5_c002w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gjjvb"]
atlas = ExtResource("1_l1tv2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crpia"]
atlas = ExtResource("1_l1tv2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfdq"]
atlas = ExtResource("1_l1tv2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdfke"]
atlas = ExtResource("2_ljq40")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvst"]
atlas = ExtResource("2_ljq40")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqcup"]
atlas = ExtResource("2_ljq40")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6r75"]
atlas = ExtResource("2_ljq40")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ho51n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjjvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crpia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcfdq")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdfke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqcup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6r75")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="MenuDog" type="AnimatedSprite2D"]
use_parent_material = true
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ho51n")
animation = &"run"
script = ExtResource("2_fuvt8")

[node name="Shadow2" parent="." instance=ExtResource("4_12wkv")]
visible = false
position = Vector2(0, 8)

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="Heart" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(11, -17)
texture = ExtResource("5_c002w")
region_enabled = true
region_rect = Rect2(80, 80, 16, 16)

[node name="HeartTimer" type="Timer" parent="."]

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="HeartTimer" to="." method="_on_heart_timer_timeout"]
